--- a/senate-style.css
+++ b/senate-style.css
@@ -1,18 +1,25 @@
-html {
+:root {
     font-size: 10pt;
-    
 }
 
 body {
-    font-family: Inter;
+    font-family: "Inter";
+    margin: 0;
+    padding: 0;
+}
+
+.container {
     display: grid;
     grid-template-columns: 6cm repeat(auto-fill, 4.6cm);
     grid-template-rows: min-content min-content 7mm min-content;
     font-size: 1rem;
     margin: 0;
+    min-height: 100dvh;
     height: min-content;
-    width: min-content;
+    width: 100%;
+    overflow-x: auto;
     font-feature-settings: "ss07";
+    box-sizing: border-box;
 }
 
 img {
